Added email addresses to the files for volume 7

--- a/vol7-1-article1.html
+++ b/vol7-1-article1.html
@@ -78,6 +78,8 @@
                            Delta State University
                             <br>
                             Delta State, Nigeria
+                            <br>
+                            esoobas@gmail.com
                         </p>
                         <p>
                             <strong>Abstract</strong>
