--- a/vol7-1-article2.html
+++ b/vol7-1-article2.html
@@ -76,11 +76,15 @@
                             Grace Anyango Nyambok
                             <br>
                             University of Nairobi Library
+                            <br>
+                            nyangig@gmail.com
                         </p>
                         <p style="text-align: center;" class="text-white-75 mb-4">
                             Henry Ogada Hongo
                             <br>
                             The Technical University of Kenya
+                            <br>
+                            henryhongo55@gmail.com
                         </p>
                         <p>
                             <strong>Abstract</strong>
