--- a/vol7-1-article3.html
+++ b/vol7-1-article3.html
@@ -78,6 +78,8 @@
                             University of Pretoria
                             <br>
                             South Africa
+                            <br>
+                            hilda.chikwanda@up.ac.za
                         </p>
                         <p style="text-align: center;" class="text-white-75 mb-4">
                             Gerald Tafadzwa Zimowa
@@ -87,6 +89,8 @@
                             University of Pretoria
                             <br>
                             South Africa
+                            <br>
+                            gerald.zimowa@gmail.com
                         </p>
                         <p>
                             <strong>Abstract</strong>
