--- a/vol7-1-article4.html
+++ b/vol7-1-article4.html
@@ -76,6 +76,8 @@
                             Library and Information Science
                             <br>
                             Ahmadu Bello University, Zaria-Nigeria
+                            <br>
+                            talk2felixo@gmail.com
                         </p>
                         <p style="text-align: center;" class="text-white-75 mb-4">
                             Audrey Gambo Wisdom
@@ -83,6 +85,8 @@
                             Kashim Ibrahim Library
                             <br>
                            Ahmadu Bello University, Zaria, Nigeria
+                           <br>
+                           audreywisdom70@gmail.com
                         </p>
                         <p>
                             <strong>Abstract</strong>
