--- a/vol7-1-article5.html
+++ b/vol7-1-article5.html
@@ -76,6 +76,8 @@
                             Department of Library & Information Science
                             <br>
                             Tai Solarin University of Education, Ijagun, Ijebu Ode, Nigeria
+                            <br>
+                            simisayeao@tasued.edu.ng
                         </p>
                         <p style="text-align: center;" class="text-white-75 mb-4">
                             Popoola, Sunday Olanrewaju
@@ -83,6 +85,8 @@
                             Department of Library, Archival and Information Studies
                             <br>
                             University of Ibadan, Nigeria
+                            <br>
+                            drpopoola@gmail.com
                         </p>
                         <p>
                             <strong>Abstract</strong>
