--- a/vol7-1-article6.html
+++ b/vol7-1-article6.html
@@ -76,6 +76,8 @@
                             Department of Information Studies
                             <br>
                             University of Ghana, Legon
+                            <br>
+                            FEntsua-Mensah@ug.edu.gh
                         </p>
                         <p style="text-align: center;" class="text-white-75 mb-4">
                             T. B. Van Der Walt
