--- a/vol7-1-article7.html
+++ b/vol7-1-article7.html
@@ -75,6 +75,8 @@
                             Department of Communication Science
                             <br>
                             University of South Africa
+                            <br>
+                            barker@unisa.ac.za
                         <p>
                             <strong>Abstract</strong>
                         </p>
