--- a/editorialboard.html
+++ b/editorialboard.html
@@ -19,12 +19,12 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
- 
+
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav" style="border-top-style: solid;
         background-color: rgb(129, 9, 9);">
             <div class="container px-4 px-lg-5">
-                
+
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
@@ -49,18 +49,16 @@
                         <h2 class="text-white mt-0" text-align="left">Editorial Board</h2>
                         <ol class="text-white-75 mb-4" style="text-align: left;margin: 3em; display: table;">
                             <li>Prof. Maria G.N. Musoke, Kyambogo University, Uganda</li>
-                            <li>Prof. Justus Wamukoya, Moi University, Kenya</li>
                             <li>Prof. Bosire Onyancha, University of South Africa (UNISA), South Africa</li>
                             <li>Prof. Frankwell Dulle, Sokoine University of Agriculture, Tanzania</li>
-                            <li>Prof. Joseph Kavulya, The Catholic University of Eastern Africa (CUEA), Kenya</li>
                             <li>Prof. Edda T. Lwoga, College of Business Education (CBE), Tanzania</li>
                             <li>Prof. Tom Kwanya, Technical University of Kenya, Kenya</li>
-                            <li>Dr. Tella Adeyinka, University of Ilorin, Nigeria</li>
+                            <li>Prof. Tella Adeyinka, University of Ilorin, Nigeria</li>
+                            <li>Prof. Peterson Dewah, National University of Science and Technology, Zimbabwe</li>
                             <li>Dr. Wanyenda Chilimo, Technical University of Mombasa, Kenya</li>
                             <li>Dr. Harrison Bii, University of Kabianga, Kenya</li>
                             <li>Prof. Kutoma Wakunuma, De Montfort University, United Kingdom</li>
-                            <li>Dr. Sylvia Ogola, United States International University, Kenya</li>
-                            <li>Dr. Musa Olaka, University of Kansas, USA</li> 
+                            <li>Dr. Musa Olaka, University of Kansas, USA</li>
                         </ol>
                     </div>
                     <div class="col-lg-8 text-center">
@@ -69,23 +67,23 @@
                           Prof. Tom Kwanya
                          <br>
                          Department of Information and Library Science
-                         <br> 
+                         <br>
                          The Technical University of Kenya
                          <br>
-                         Email: tom.kwanya@gmail.com 
-                       </div>   
+                         Email: tom.kwanya@gmail.com
+                       </div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Services-->
-       
+
         <!-- Footer-->
         <footer class="bg-light py-5">
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Published by</div></div>
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">The Regional Institute of Information and Knowledge Management</div></div>
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">P.O. BOX 24358-00100, Nairobi, Kenya</div></div>
-            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy;<script>document.write(new Date().getFullYear());</script></div></div>    
+            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy;<script>document.write(new Date().getFullYear());</script></div></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -100,4 +98,3 @@
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
 </html>
-
