Made changes to the editorila board page

--- a/editorialboard.html
+++ b/editorialboard.html
@@ -48,6 +48,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0" text-align="left">Editorial Board</h2>
                         <ol class="text-white-75 mb-4" style="text-align: left;margin: 3em; display: table;">
+                            <li>Prof. Dennis Ocholla, University of Zululand, South Africa - Chairperson</li>
                             <li>Prof. Maria G.N. Musoke, Kyambogo University, Uganda</li>
                             <li>Prof. Bosire Onyancha, University of South Africa (UNISA), South Africa</li>
                             <li>Prof. Frankwell Dulle, Sokoine University of Agriculture, Tanzania</li>
@@ -55,9 +56,9 @@
                             <li>Prof. Tom Kwanya, Technical University of Kenya, Kenya</li>
                             <li>Prof. Tella Adeyinka, University of Ilorin, Nigeria</li>
                             <li>Prof. Peterson Dewah, National University of Science and Technology, Zimbabwe</li>
+                            <li>Prof. Kutoma Wakunuma, De Montfort University, United Kingdom</li>
                             <li>Dr. Wanyenda Chilimo, Technical University of Mombasa, Kenya</li>
                             <li>Dr. Harrison Bii, University of Kabianga, Kenya</li>
-                            <li>Prof. Kutoma Wakunuma, De Montfort University, United Kingdom</li>
                             <li>Dr. Musa Olaka, University of Kansas, USA</li>
                         </ol>
                     </div>
