Added another person on the editorial page

--- a/editorialboard.html
+++ b/editorialboard.html
@@ -57,6 +57,7 @@
                             <li>Prof. Tella Adeyinka, University of Ilorin, Nigeria</li>
                             <li>Prof. Peterson Dewah, National University of Science and Technology, Zimbabwe</li>
                             <li>Prof. Kutoma Wakunuma, De Montfort University, United Kingdom</li>
+                            <li>Prof. Proscovia Svard, Sorbonne University, Abu Dhabi UAE</li>
                             <li>Dr. Wanyenda Chilimo, Technical University of Mombasa, Kenya</li>
                             <li>Dr. Harrison Bii, University of Kabianga, Kenya</li>
                             <li>Dr. Musa Olaka, University of Kansas, USA</li>
