Updated more articles of vol 7 version two

--- a/currentissues.html
+++ b/currentissues.html
@@ -71,6 +71,12 @@
                                     style="color: antiquewhite;">The Effects of the Shared Repertoire and Voluntary Action Characteristics of the Community of Practice on Knowledge Sharing at Kenya Revenue Authority</a></li><br>
                             <li class="nav-item"> <a href="vol7-2-article5.html" target="_blank"
                                     style="color: antiquewhite;">Cell-phone Instruction and Academic Achievements of Undergraduates During Covid-19 Pandemic in Delta and Rivers States, Nigeria</a></li><br>
+                            <li class="nav-item"> <a href="vol7-2-article6.html" target="_blank"
+                                    style="color: antiquewhite;">Issues to consider when applying indigenous medical knowledge to provide healthcare by county governments in Kenya</a></li><br>
+                            <li class="nav-item"> <a href="vol7-2-article7.html" target="_blank"
+                                    style="color: antiquewhite;">Teaching information literacy in Nigerian universities using advanced technologies</a></li><br>
+                            <li class="nav-item"> <a href="vol7-2-article8.html" target="_blank"
+                                    style="color: antiquewhite;">Gaps in the implementation of knowledge management frameworks: proposal for their improvement in an ICT organisation’s retail operations</a></li><br>
                             <br>
                         </ol>
                     </article>
