Added related links tab

--- a/authorinstructions.html
+++ b/authorinstructions.html
@@ -19,7 +19,7 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
- 
+
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav" style="border-top-style: solid;
         background-color: rgb(129, 9, 9);">
@@ -34,6 +34,7 @@
                         <li class="nav-item"><a class="nav-link" href="editorialpolicy.html">Editorial Policy</a></li>
                         <li class="nav-item"><a class="nav-link" href="currentissues.html">Current Issue</a></li>
                         <li class="nav-item"><a class="nav-link" href="archive.html">Past Issues</a></li>
+                        <li class="nav-item"><a class="nav-link" href="relatedlinks.html">Related Links</a></li>
                         <li class="active"><a class="nav-link" href="authorinstructions.html">Instructions to Authors</a></li>
                         <li class="nav-item"><a class="nav-link" href="submit.html">Submit Manuscript</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
@@ -62,7 +63,7 @@
                         <h3 class="text-white mt-0">Language</h3>
                         <p class="text-white-75 mb-4">All manuscripts will be written in English (United Kingdom).</p>
                         <h3 class="text-white mt-0">Number of words</h3>
-                        <p class="text-white-75 mb-4" style="text-align: justify;">Manuscripts should not exceed 5,000 words including the abstract, references and appendices. This word count also includes figures, tables, and equations which should be accounted for by calculating 
+                        <p class="text-white-75 mb-4" style="text-align: justify;">Manuscripts should not exceed 5,000 words including the abstract, references and appendices. This word count also includes figures, tables, and equations which should be accounted for by calculating
                             a word count equivalent to the space they occupy.</p>
                         <h3 class="text-white mt-0">Text Formatting</h3>
                         <p class="text-white-75 mb-4" style="text-align: justify;">The manuscript should be formatted using Callibri, 11 pt font size and 1.5 line spacing.</p>
@@ -78,7 +79,7 @@
                             <li>Conference proceedings</li>
                             <p><em>Schnase, J. L., & Cunnius, E. L. (Eds.). (1995). Proceedings from CSCL '95: The First International Conference on Computer Support for Collaborative Learning. Mahwah, NJ: Erlbaum.</em></p>
                             <li>Online resource</li>
-                            <p><em>Author, A. A., & Author, B. B. (Date of publication). Title of article. Title of Online Periodical, volume number(issue number if available). Retrieved from 
+                            <p><em>Author, A. A., & Author, B. B. (Date of publication). Title of article. Title of Online Periodical, volume number(issue number if available). Retrieved from
 
                                 http://www.someaddress.com/full/url/</em></p>
                         </ul>
@@ -100,13 +101,13 @@
             </div>
         </section>
         <!-- Services-->
-       
+
         <!-- Footer-->
         <footer class="bg-light py-5">
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Published by</div></div>
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">The Regional Institute of Information and Knowledge Management</div></div>
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">P.O. BOX 24358-00100, Nairobi, Kenya</div></div>
-            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy;<script>document.write(new Date().getFullYear());</script></div></div>    
+            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy;<script>document.write(new Date().getFullYear());</script></div></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -121,4 +122,3 @@
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
 </html>
-
