--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         background-color: rgb(129, 9, 9);">
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand" href="#page-top"></a>
-                <button class="navbar-toggler navbar-toggler-right" 
-                type="button" data-bs-toggle="collapse" 
-                data-bs-target="#navbarResponsive" 
-                aria-controls="navbarResponsive" aria-expanded="false" 
+                <button class="navbar-toggler navbar-toggler-right"
+                type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                
+
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
                         <li class="active"><a class="nav-link" href="index.html">Home</a></li>
@@ -38,6 +38,7 @@
                         <li class="nav-item"><a class="nav-link" href="editorialpolicy.html">Editorial Policy</a></li>
                         <li class="nav-item"><a class="nav-link" href="currentissues.html">Current Issue</a></li>
                         <li class="nav-item"><a class="nav-link" href="archive.html">Past Issues</a></li>
+                        <li class="nav-item"><a class="nav-link" href="relatedlinks.html">Related Links</a></li>
                         <li class="nav-item"><a class="nav-link" href="authorinstructions.html">Instructions to Authors</a></li>
                         <li class="nav-item"><a class="nav-link" href="submit.html">Submit Manuscript</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
@@ -54,10 +55,10 @@
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">This is a biannual open access scholarly journal. 
-                            All the articles published in the journal are double blind peer reviewed by 
+                        <p class="text-white-75 mb-5">This is a biannual open access scholarly journal.
+                            All the articles published in the journal are double blind peer reviewed by
                             eminent information and knowledge management scholars</p>
-                       
+
                     </div>
                 </div>
             </div>
@@ -68,7 +69,7 @@
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Published by</div></div>
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">The Regional Institute of Information and Knowledge Management</div></div>
             <div class="container px-4 px-lg-5"><div class="small text-center text-muted">P.O. BOX 24358-00100, Nairobi, Kenya</div></div>
-            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy;<script>document.write(new Date().getFullYear());</script></div></div>    
+            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy;<script>document.write(new Date().getFullYear());</script></div></div>
             </div>
         </footer>
         <!-- Bootstrap core JS-->
