--- a/relatedlinks.html
+++ b/relatedlinks.html
@@ -28,12 +28,12 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="active"><a class="nav-link" href="about.html">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="editorialboard.html">Editorial Board</a></li>
                         <li class="nav-item"><a class="nav-link" href="editorialpolicy.html">Editorial Policy</a></li>
                         <li class="nav-item"><a class="nav-link" href="currentissues.html">Current Issue</a></li>
                         <li class="nav-item"><a class="nav-link" href="archive.html">Past Issues</a></li>
-                        <li class="nav-item"><a class="nav-link" href="relatedlinks.html">Related Links</a></li>
+                        <li class="active"><a class="nav-link" href="archive.html">Related Links</a></li>
                         <li class="nav-item"><a class="nav-link" href="authorinstructions.html">Instructions to Authors</a></li>
                         <li class="nav-item"><a class="nav-link" href="submit.html">Submit Manuscript</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
