--- a/vol7-2-article8.html
+++ b/vol7-2-article8.html
@@ -48,6 +48,7 @@
                     <li class="nav-item"><a class="nav-link" href="editorialpolicy.html">Editorial Policy</a></li>
                     <li class="active"><a class="nav-link" href="currentissues.html">Current Issue</a></li>
                     <li class="nav-item"><a class="nav-link" href="archive.html">Past Issues</a></li>
+                    <li class="nav-item"><a class="nav-link" href="relatedlinks.html">Related Links</a></li>
                     <li class="nav-item"><a class="nav-link" href="authorinstructions.html">Instructions to Authors</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="submit.html">Submit Manuscript</a></li>
