Added the related links page to the project and updated it

--- a/relatedlinks.html
+++ b/relatedlinks.html
@@ -46,13 +46,12 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">About Us</h2>
-                        <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4">This is a biannual open access scholarly journal. All the articles published in the journal are double blind peer reviewed by eminent information and knowledge management scholars. One print special edition is published annually. This edition publishes the most popular articles of the year.</p>
-                        <h3 class="text-white mt-0">Vision</h3>
-                        <p class="text-white-75 mb-4">To be the preferred academic journal on information and knowledge management in Africa </p>
-                        <h3 class="text-white mt-0">Mission</h3>
-                        <p class="text-white-75 mb-4">To provide a credible, authoritative and trustworthy platform for information and knowledge management professionals and scholars in Africa and beyond to engage, share and learn through the publishing of quality scholarly materials</p>
+                        <h2 class="text-white mt-0" text-align="left">Related Information to RJIKM</h2>
+                        <ol class="text-white-75 mb-4" style="text-align: left;margin: 3em; display: block;">
+                            <li><a href="http://sics.tukenya.ac.ke/index.php/departments/information-and-library-sciences" target="_blank">The Technical University of Kenya- Department of Information and Library Sciences</a></li>
+                            <li><a href="https://www.ajol.info/index.php" target="_blank">African Journal Online</a></li>
+                            <li><a href="https://doaj.org/" target="_blank">Directory of Open Access Journals</a></li>
+                        </ol>
                     </div>
                 </div>
             </div>
