--- a/vol7-1-article3.html
+++ b/vol7-1-article3.html
@@ -47,8 +47,8 @@
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="editorialboard.html">Editorial Board</a></li>
                     <li class="nav-item"><a class="nav-link" href="editorialpolicy.html">Editorial Policy</a></li>
-                    <li class="active"><a class="nav-link" href="currentissues.html">Current Issue</a></li>
-                    <li class="nav-item"><a class="nav-link" href="archive.html">Past Issues</a></li>
+                    <li class="nav-item"><a class="nav-link" href="currentissues.html">Current Issue</a></li>
+                    <li class="active"><a class="nav-link" href="archive.html">Past Issues</a></li>
                     <li class="nav-item"><a class="nav-link" href="relatedlinks.html">Related Links</a></li>
                     <li class="nav-item"><a class="nav-link" href="authorinstructions.html">Instructions to Authors</a>
                     </li>
