Updated the volume 8 second edition with the second article code

--- a/currentissues.html
+++ b/currentissues.html
@@ -128,11 +128,12 @@
                 <br />
                 <li class="nav-item">
                   <a
-                    href="vol8-1-article2.html"
+                    href="vol8-2-article2.html"
                     target="_blank"
                     style="color: antiquewhite"
-                    >Awareness and Adoption of Quick Response Code by Librarians
-                    in Universities in Delta and Edo States, Nigeria</a
+                    >The extent of social media usage for
+                    exchanging knowledge by higher
+                    education students in Tanzania</a
                   >
                 </li>
                 <br />
