Updated the volume 8 second edition with the third article code

--- a/currentissues.html
+++ b/currentissues.html
@@ -139,11 +139,13 @@
                 <br />
                 <li class="nav-item">
                   <a
-                    href="vol8-1-article3.html"
+                    href="vol8-2-article3.html"
                     target="_blank"
                     style="color: antiquewhite"
-                    >A Framework for Devolution of Records Management to County
-                    Governments in Kenya</a
+                    >The moderating effect of social
+                    media usage on factors influencing
+                    workplace knowledge sharing:
+                    towards a predictive model</a
                   >
                 </li>
                 <br />
