--- a/currentissues.html
+++ b/currentissues.html
@@ -151,12 +151,13 @@
                 <br />
                 <li class="nav-item">
                   <a
-                    href="vol8-1-article4.html"
+                    href="vol8-2-article4.html"
                     target="_blank"
                     style="color: antiquewhite"
-                    >Knowledge Management as a Tool for Improving Work
-                    Performance in selected law firms in Nairobi County,
-                    Kenya</a
+                    >Online newspaper reading patterns
+                    of a university community before and
+                    during the COVID-19 pandemic: the
+                    case of the University of Venda</a
                   >
                 </li>
                 <br />
