Updated the volume 8 second edition with the sixth article code

--- a/currentissues.html
+++ b/currentissues.html
@@ -176,11 +176,12 @@
                 <br />
                 <li class="nav-item">
                   <a
-                    href="vol8-1-article6.html"
+                    href="vol8-2-article6.html"
                     target="_blank"
                     style="color: antiquewhite"
-                    >Use of Periodicals among Library and Information Science
-                    Postgraduate Students in University Libraries in Nigeria</a
+                    >Preservation of organisational
+                    memory at the National University of
+                    Science and Technology, Zimbabwe</a
                   >
                 </li>
                 <br />
