Updated the volume 8 second edition with the seventh article code

--- a/currentissues.html
+++ b/currentissues.html
@@ -187,11 +187,13 @@
                 <br />
                 <li class="nav-item">
                   <a
-                    href="vol8-1-article7.html"
+                    href="vol8-2-article7.html"
                     target="_blank"
                     style="color: antiquewhite"
-                    >Towards a Conceptual Framework for the Ontology of Fake
-                    News Genres in Traditional Media in Kenya</a
+                    >Knowledge management of
+                    consumer lived experience on digital
+                    platforms to enhance organisational
+                    performance</a
                   >
                 </li>
                 <br />
