Updated the volume 8 second edition with the ninth article code

--- a/currentissues.html
+++ b/currentissues.html
@@ -222,12 +222,13 @@
                 <br />
                 <li class="nav-item">
                   <a
-                    href="vol8-1-article10.html"
+                    href="vol8-2-article10.html"
                     target="_blank"
                     style="color: antiquewhite"
-                    >Knowledge Management Use of the Web 2.0-Driven SECI Model
-                    to Improve Knowledge Creation and Sharing Practices in
-                    Selected Academic Libraries in Tanzania</a
+                    >The role of digital humanities in the
+                    preservation of indigenous
+                    knowledge at the National Museums
+                    of Kenya</a
                   >
                 </li>
                 <br />
